# Autonomous-navigating-robot

./: README.md
robot_visit/: CMakeLists.txt  package.xml  setup.py
robot_visit/html/html/: annotated.html  annotated_dup.js  battery__control_8py.html  battery__control_8py.js  classbattery__control_1_1battery-members.html  classbattery__control_1_1battery.html  classbattery__control_1_1battery.js  classes.html  classmove_1_1_move__manager-members.html  classmove_1_1_move__manager.html  classmove_1_1_move__manager.js  classmove_1_1_move__manager__inherit__graph.map  classstate__decision__maker_1_1charging-members.html  classstate__decision__maker_1_1charging.html  classstate__decision__maker_1_1checking-members.html  classstate__decision__maker_1_1checking.html  classstate__decision__maker_1_1decision__maker-members.html  classstate__decision__maker_1_1decision__maker.html  classstate__decision__maker_1_1decision__maker.js  classstate__decision__maker_1_1wait__map-members.html  classstate__decision__maker_1_1wait__map.html  classstate__decision__maker_1_1wait__map.js  classstate__decision__maker_1_1wander-members.html  classstate__decision__maker_1_1wander.html  classstate__decision__maker_1_1wander__coll__graph.md5  classstate__decision__maker_1_1wander__inherit__graph.map  (+30 more)
robot_visit/launch/: robot_visit.launch
robot_visit/msg/: Battery.msg  Charge.msg  Control.msg  MapBuilt.msg
robot_visit/scripts/: battery_control.py  build_map.py  control.py  move.py  state_decision_maker.py  topological_map_abox.owl  topological_map_abox_new.owl
robot_visit/srv/: Move.srv
(+197 files in other folders)
